Camera now stuck next to correct player playing

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
     right: 0;
     top: 0;
     width: 200px;
-    height: 200px;
+    height: 30px;
     border: #fb0 dotted 4px;
     background-color: #fff;
     cursor: pointer;
